Update colors for links and nav elements

--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,8 @@
 /*-- scss:defaults --*/
-$body-bg:   #191919;
+$body-bg:    #191919;
+$link-color: #f0f72a;
+$navbar-fg:  #191919;
+$navbar-hl:  #f0f72a;
 
 /*-- scss:rules --*/
 
